// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expense list should render correctly when no expenses 1`] = `
<div
  className="wrapper"
>
  <div
    className="list-header"
  >
    <div
      className="show-mobile"
    >
      Expenses
    </div>
    <div
      className="show-desktop"
    >
      Expense
    </div>
    <div
      className="show-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-item list-item--msg"
  >
    <span>
      No expenses
    </span>
  </div>
</div>
`;

exports[`expense list should render correctly when there is expenses 1`] = `
<div
  className="wrapper"
>
  <div
    className="list-header"
  >
    <div
      className="show-mobile"
    >
      Expenses
    </div>
    <div
      className="show-desktop"
    >
      Expense
    </div>
    <div
      className="show-desktop"
    >
      Amount
    </div>
  </div>
  <Expense
    amount={100}
    createdAt={1541604692290}
    description="Description 1"
    id="1"
    key="1"
    note="Note 1"
  />
  <Expense
    amount={200}
    createdAt={1541777492293}
    description="Description 2"
    id="2"
    key="2"
    note="Note 2"
  />
</div>
`;
